[package]
name = "async-msp-lib"
version = "0.1.0"
authors = ["Ilya Guterman <amfernusus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiwii_serial_protocol = "0.1.0"
serialport = "3.3.0"

[dependencies.async-std]
version = "1.5.0"
features = ["unstable", "attributes"]