[package]
name = "async_msp_lib"
version = "0.1.0"
authors = ["Ilya Guterman <amfernusus@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Async msp library for iNav and BetaFlight"
repository = "https://github.com/amfern/inav-msp-lib.rs"
readme = "README.md"
categories = ["asynchronous", "embedded"]
keywords = ["msp", "multiwii", "inav", "betaflight"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiwii_serial_protocol_v2 = "0.1.3"
serialport = "3.3.0"
packed_struct = "0.3"
packed_struct_codegen = "0.3"

[dependencies.async-std]
version = "1.5.0"
features = ["unstable", "attributes"]