[package]
name = "async_msp_bind"
version = "0.0.1"
authors = ["Ilya Guterman <amfernusus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_msp_lib = { path = "../" }

[dependencies.async-std]
version = "1.6.3"
features = ["unstable", "attributes"]

[lib]
name = "libasyncmsp"
crate-type = ["cdylib"]