[package]
name = "async_msp_cli"
version = "0.1.10"
authors = ["Ilya Guterman <amfernusus@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Async msp cli for iNav and BetaFlight"
repository = "https://github.com/amfern/async_msp_cli.rs"
readme = "README.md"
categories = ["asynchronous", "embedded", "command-line-utilities"]
keywords = ["msp", "multiwii", "inav", "betaflight"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiwii_serial_protocol_v2 = "0.1.11"
async_msp_lib = "0.1.11"
serialport = "3.3.0"
packed_struct = "0.3"
packed_struct_codegen = "0.3"
futures = "0.3.4"
clap = "3.0.0-beta.1"
itertools = "0.9.0"

[dependencies.async-std]
version = "1.6.1"
features = ["unstable", "attributes"]

[features]
suppport_int32_setting_type = ["multiwii_serial_protocol_v2/suppport_int32_setting_type", "async_msp_lib/suppport_int32_setting_type"]

[tasks.clean]
command = "cargo"
args = ["clean"]

[tasks.release]
command = "cargo"
args = ["build", "--release"]
dependencies = ["clean"]

[tasks.mkdir-dist]
command = "docker"
args = ["cp ", "--volume", "${PWD}:/root/src", "--workdir", "/root/src", "joseluisq/rust-linux-darwin-builder:1.43.0", "cargo", "build", "--release", "--target", "x86_64-apple-darwin"]
dependencies = ["clean"]

[tasks.release-darwin]
command = "docker"
args = ["run", "--rm", "--volume", "${PWD}:/root/src", "--workdir", "/root/src", "joseluisq/rust-linux-darwin-builder:1.43.0", "cargo", "build", "--release", "--target", "x86_64-apple-darwin"]
dependencies = ["clean"]

[tasks.release-windows]
command = "cross"
args = ["build", "--target", "x86_64-pc-windows-gnu", "--release"]
dependencies = ["clean"]

[tasks.dist-folder]
command = "mkdir"
args = ["-p", "dist"]

[tasks.copy-to-dist]
script = [
    "cp target/x86_64-pc-windows-gnu/release/async_msp_cli.exe dist/async_msp_cli_windows.exe",
    "cp target/x86_64-apple-darwin/release/async_msp_cli dist/async_msp_cli_darwin",
    "cp target/release/async_msp_cli dist/async_msp_cli_linux",
]
dependencies = ["dist-folder"]

[tasks.release-int32]
command = "cargo"
args = ["build", "--release", "--features", "suppport_int32_setting_type"]
dependencies = ["clean"]

[tasks.release-darwin-int32]
command = "docker"
args = ["run", "--rm", "--volume", "${PWD}:/root/src", "--workdir", "/root/src", "joseluisq/rust-linux-darwin-builder:1.43.0", "cargo", "build", "--release", "--target", "x86_64-apple-darwin", "--features", "suppport_int32_setting_type"]
dependencies = ["clean"]

[tasks.release-windows-int32]
command = "cross"
args = ["build", "--target", "x86_64-pc-windows-gnu", "--release", "--features", "suppport_int32_setting_type"]
dependencies = ["clean"]

[tasks.copy-to-dist-int32]
script = [
    "cp target/x86_64-pc-windows-gnu/release/async_msp_cli.exe dist/async_msp_cli_windows_int32.exe",
    "cp target/x86_64-apple-darwin/release/async_msp_cli dist/async_msp_cli_darwin_int32",
    "cp target/release/async_msp_cli dist/async_msp_cli_linux_int32",
]
dependencies = ["dist-folder"]

[tasks.release-all]
dependencies = [
    "release",
    "release-darwin",
    "release-windows",
    "copy-to-dist",
]

[tasks.release-all-int32]
dependencies = [
    "release-int32",
    "release-darwin-int32",
    "release-windows-int32",
    "copy-to-dist-int32",
]
